...
    },
  ) { innerPadding ->
    Box(
      modifier =
        Modifier
          .padding(innerPadding)
          .testTag("libraryScreen")
          .pullRefresh(pullRefreshState)
          .fillMaxSize(),
    ) {
      when (cachedItems.itemCount == 0) {
        true -> CachedItemsFallbackComposable()
        false ->
...
